--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -45,7 +45,7 @@
         <a href="https://github.com/ramiroagm/WinFormTester/blob/master/README.md" class="btn btn-danger">README</a>
     </div>
     <div class="card-footer text-body-secondary">
-        Por cualquier consulta, por favor, <a href="https://wa.me/+59899113906" target="_blank">contactarse por chat</a>
+        Por cualquier consulta, por favor, <a href="https://signal.me/#eu/o8Jiopihz2QrV5GCt232gsuEC7MDNyz3FnOeJR0xj-IeDz6FMDVBHIjNGzVD90ld" target="_blank">contactarse por chat (Signal)</a>
     </div>
 </div>
 
