Cambios en pantalla principal para visualización de elementos.

--- a/TesterBlazor/Components/_Imports.razor
+++ b/TesterBlazor/Components/_Imports.razor
@@ -17,6 +17,7 @@
 @using TesterBlazor.Models.InfoCredito
 @using TesterBlazor.Models.Telegram
 @using TesterBlazor.Components
+@using TesterBlazor.Components.Layout
 @using TesterBlazor.Components.Pages.InfoCredito.Personas.Modales
 
 @using TesterProject
