--- a/TesterBlazor/Components/Landing.razor
+++ b/TesterBlazor/Components/Landing.razor
@@ -1,5 +1,19 @@
-﻿@page "/"
+﻿@layout EmptyLayout
+@page "/"
 
+<script>
+    // Si no estamos en la primera carga (SPA), forzar recarga completa
+    if (window.Blazor && window.history && window.performance && performance.navigation.type === 1) {
+        // Es recarga, no hacer nada
+    } 
+    else if (window.Blazor && window.history) 
+    {
+        // Es navegación SPA, forzar recarga
+        window.location.reload();
+    }
+</script>
+
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <section class="menu menu2 cid-uHhBVF5BD5" once="menu" id="menu2-0">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
@@ -9,7 +23,7 @@
                         <img src="assets/images/memito-logo-96x96.png" alt="Memito Software" style="height: 3.5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html#top">Ramiro Gallo</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="#top">Ramiro Gallo</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -23,12 +37,12 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="assets/files/2024-ES-CVRamiroG.pdf" target="_blank">Descarga CV</a></li>
                     <li class="nav-item">
-                        <a class="nav-link link text-black text-primary display-4" href="/home">
+                        <a class="nav-link link text-black text-primary display-4" href="/home" onclick="setTimeout(()=>location.href=this.href, 10); return false;">
                             Sitio de prueba
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link text-black text-primary display-4" href="index.html#contacts2-3">Contaco</a>
+                        <a class="nav-link link text-black text-primary display-4" href="#contacts2-3">Contacto</a>
                     </li>
                 </ul>
                 <div class="icons-menu">
@@ -53,7 +67,7 @@
 
                 <p class="mbr-text mbr-fonts-style display-7">Podrán encontrar a continuación un mi C.V. preparado y descargarlo si fuera necesario.<br>También podrán ver un sitio Blazor de prueba [en desarrollo]. Por más información y las útlimas actualizaciones: visiten el repositorio público del mismo.</p>
                 <div class="mbr-section-btn mt-3">
-                    <a class="btn btn-warning display-4" href="/home"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Ir al sitio de prueba</a>
+                    <a class="btn btn-warning display-4" href="/home" onclick="location.href='/home'"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Ir al sitio de prueba</a>
                     <a class="btn btn-success-outline display-4" href="https://github.com/ramiroagm/WinFormTester">Ver repositorio público &gt;</a>
                 </div>
             </div>
@@ -62,16 +76,12 @@
 </section>
 
 <section class="team1 cid-uM5rJREV0x" id="team1-e">
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                     <strong>Sobre mi</strong>
                 </h3>
-
             </div>
             <div class="col-sm-6 col-lg-4">
                 <div class="card-wrap">
@@ -82,24 +92,20 @@
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
                             <strong>Ramiro Gallo</strong>
                         </h5>
-
                         <p class="card-text mbr-fonts-style align-center display-7">
                             Desarrollador Full Stack enfocado principalmente en tecnologías Microsoft, las cuales se detallan más adelante.
                         </p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="" target="_blank">
+                                <a href="https://www.linkedin.com/in/ramiroagm/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="" target="_blank">
+                                <a href="https://github.com/ramiroagm" target="_blank">
                                     <span class="mbr-iconfont socicon-github socicon"></span>
                                 </a>
                             </div>
-
-
-
                         </div>
 
                     </div>
@@ -124,31 +130,19 @@
                                 </a>
                             </div>
                             <div class="soc-item">
-                                <a href="/home" target="_blank">
+                                <a href="/home" onclick="setTimeout(()=>location.href=this.href, 10); return false;" target="_blank">
                                     <span class="mbr-iconfont mobi-mbri-globe-2 mobi-mbri"></span>
                                 </a>
                             </div>
-
-
-
                         </div>
-
                     </div>
                 </div>
             </div>
-
-
-
-
         </div>
     </div>
 </section>
 
 <section class="content16 cid-uHhHWSTXP0" id="content16-a">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
@@ -156,7 +150,6 @@
                     <h3 class="mbr-section-title mb-0 mbr-fonts-style display-2">
                         <strong>Experiencia (por año y cargo)</strong>
                     </h3>
-
                 </div>
                 <div id="bootstrap-accordion_6" class="panel-group accordionStyles accordion mt-4" role="tablist" aria-multiselectable="true">
                     <div class="card mb-3">
@@ -287,29 +280,30 @@
 </section>
 
 <section class="tabs content18 cid-uM5sXWw6xg" id="tabs1-i">
-
-
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
                 <h3 class="mbr-section-title mb-0 mbr-fonts-style display-2"><strong>Más información</strong></h3>
-
             </div>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-6">
                 <ul class="nav nav-tabs mb-4" role="tablist">
-                    <li class="nav-item first mbr-fonts-style"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-i_tab0" aria-selected="true"><strong>Programando</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-i_tab1" aria-selected="true"><strong>Otras aplicaciones</strong>&nbsp;</a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style display-7" role="tab" data-toggle="tab" href="#tabs1-i_tab2" aria-selected="false"><strong>Idiomas</strong></a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active display-7" role="tab" data-toggle="tab" href="#tabs1-i_tab3" aria-selected="true"><strong>Tecnologías</strong></a></li>
-
-
+                    <li class="nav-item first mbr-fonts-style">
+                        <a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tab1" aria-selected="true"><strong>Programando</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mbr-fonts-style display-7" role="tab" data-toggle="tab" href="#tab2" aria-selected="false"><strong>Otras aplicaciones</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mbr-fonts-style display-7" role="tab" data-toggle="tab" href="#tab3" aria-selected="false"><strong>Idiomas</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mbr-fonts-style display-7" role="tab" data-toggle="tab" href="#tab4" aria-selected="false"><strong>Tecnologías</strong></a>
+                    </li>
                 </ul>
                 <div class="tab-content">
-                    <div id="tab1" class="tab-pane in active" role="tabpanel">
+                    <div id="tab1" class="tab-pane fade show active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
@@ -318,7 +312,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="tab2" class="tab-pane" role="tabpanel">
+                    <div id="tab2" class="tab-pane fade" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
@@ -327,7 +321,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="tab3" class="tab-pane" role="tabpanel">
+                    <div id="tab3" class="tab-pane fade" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
@@ -336,15 +330,13 @@
                             </div>
                         </div>
                     </div>
-                    <div id="tab4" class="tab-pane" role="tabpanel">
+                    <div id="tab4" class="tab-pane fade" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">.NET, .NET Framework, C#, SQL Server, Oracle SQL, JavaScript, HTML Bootstrap, Blazor, WorkerServices, jQuery, MAUI</p>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -352,15 +344,11 @@
 </section>
 
 <section class="contacts2 cid-uHhDycTMoK" id="contacts2-3">
-    <!---->
-
-
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                 <strong>Contacto</strong>
             </h3>
-
         </div>
         <div class="row justify-content-center mt-4">
             <div class="card col-12 col-md-6">
@@ -373,7 +361,7 @@
                             <strong>WhatsApp</strong><strong><br></strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="https://wa.me/59899113906" class="text-primary">+598 99 113 906</a>
+                            <a href="https://wa.me/59899113906" target="_blank" class="text-primary">+598 99 113 906</a>
                         </p>
                     </div>
                 </div>
@@ -388,7 +376,7 @@
                             <strong>Teléfono</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="tel:+59899113906" class="text-primary">+598 99 113 906</a><br>
+                            <a href="tel:+59899113906" target="_blank" class="text-primary">+598 99 113 906</a><br>
                         </p>
                     </div>
                 </div>
@@ -396,13 +384,13 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <a href="https://www.linkedin.com/in/ramiroagm/"><span class="mbr-iconfont socicon-linkedin socicon"></span></a>
+                        <a href="https://www.linkedin.com/in/ramiroagm/" target="_blank"><span class="mbr-iconfont socicon-linkedin socicon"></span></a>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>LinkedIn</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://www.linkedin.com/in/ramiroagm/" class="text-primary">Contáctame por LinkedIn</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://www.linkedin.com/in/ramiroagm/" class="text-primary" target="_blank">Contáctame por LinkedIn</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -413,7 +401,7 @@
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>GitHub</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://github.com/ramiroagm" class="text-primary">Perfil en GitHub</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://github.com/ramiroagm" target="_blank" class="text-primary">Perfil en GitHub</a></p>
                     </div>
                 </div>
             </div>
@@ -422,45 +410,21 @@
 </section>
 
 <section class="footer3 cid-uM5FqxBPvH" once="footers" id="footer3-j">
-
-
-
-
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="row row-links">
                 <ul class="foot-menu">
-
-
-
-
-
-                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="index.html#top" class="text-primary">Volver</a></li>
-                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/2024-ES-CVRamiroG.pdf" class="text-primary">Ver C.V.</a></li>
-                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="https://github.com/ramiroagm" class="text-primary">GitHub</a></li>
+                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="#top" class="text-primary">Volver</a></li>
+                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="assets/files/2024-ES-CVRamiroG.pdf" target="_blank"  class="text-primary">Ver C.V.</a></li>
+                    <li class="foot-menu-item mbr-fonts-style display-7"><a href="https://github.com/ramiroagm" target="_blank" class="text-primary">GitHub</a></li>
                 </ul>
             </div>
-
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">Esta página fue desarrollada con Mobirise y embebida en Blazor. Por más información: consultar el repositorio [en progreso].<br>© Copyright 2025 MemitoSoftware. Todos los derechos reservados.</p>
             </div>
         </div>
     </div>
 </section>
-
-<script src="assets/web/assets/jquery/jquery.min.js"></script>
-<script src="assets/popper/popper.min.js"></script>
-<script src="assets/tether/tether.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/smoothscroll/smooth-scroll.js"></script>
-<script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-<script src="assets/dropdown/js/nav-dropdown.js"></script>
-<script src="assets/dropdown/js/navbar-dropdown.js"></script>
-<script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-<script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-<script src="assets/mbr-tabs/mbr-tabs.js"></script>
-<script src="assets/theme/js/script.js"></script>
 
 <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
 <input name="animation" type="hidden">
