--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
     <nav class="nav flex-column">
 
         <div class="nav-item px-2">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
