--- a/TesterBlazor/Components/Pages/InfoCredito/Personas/Modales/ModalNuevaPersona.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Personas/Modales/ModalNuevaPersona.razor
@@ -70,11 +70,11 @@
                         <ValidationMessage For="@(() => NuevaPersona.FechaNacimiento)" />
 
                         <!-- Botón para agregar dirección -->
-                        <button type="button" class="btn btn-outline-primary ms-3" @onclick="AbrirModalDireccion">
-                            Agregar Dirección
+                        <button type="button" class="btn btn-lg btn-outline-primary ms-3" @onclick="AbrirModalDireccion">
+                            Dirección
                         </button>
-                        <button type="button" class="btn btn-outline-danger ms-3" @onclick="AbrirModalContacto">
-                            Agregar Contacto
+                        <button type="button" class="btn btn-lg btn-outline-danger ms-3" @onclick="AbrirModalContacto">
+                            Contacto
                         </button>
                     </div>
                 </div>
