--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -4,13 +4,13 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Librería Memito 🐈‍ </a>
+        <a class="navbar-brand" href="/home">Librería Memito 🐈‍ </a>
     </div>
 </div>
 
 <input type="checkbox" title="Menú de navegación principal" class="navbar-toggler" />
 
-<div class="navbar" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
+<div class="navbar collapse-horizontal" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
     <nav class="nav flex-column">
 
         <div class="nav-item px-2">
@@ -66,6 +66,11 @@
                 </div>
             </div>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link px-4 px-3 fixed-bottom" href="/">
+                <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span>Volver
+            </NavLink>
+        </div>
     </nav>
 </div>
 
@@ -89,4 +94,3 @@
         NavigationManager.LocationChanged -= OnLocationChanged;
     }
 }
-
