--- a/TesterBlazor/wwwroot/app.css
+++ b/TesterBlazor/wwwroot/app.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: 'aptos';
+    src: url('src/fonts/aptos.ttf') format('truetype');
+}
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Aptos', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 a, .btn-link {
