Nuevos cambios. Se comienza el desarrollo de modales para nucleos. Cambios en base de datos, etc.

--- a/TesterBlazor/Components/Landing.razor
+++ b/TesterBlazor/Components/Landing.razor
@@ -64,8 +64,10 @@
         <div class="row">
             <div class="col-12 col-lg-7">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Bienvenidos a mi sitio</strong></h1>
-
-                <p class="mbr-text mbr-fonts-style display-7">Podrán encontrar a continuación un mi C.V. preparado y descargarlo si fuera necesario.<br>También podrán ver un sitio Blazor de prueba [en desarrollo]. Por más información y las útlimas actualizaciones: visiten el repositorio público del mismo.</p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                    Podrán encontrar en el sitio un C.V. preparado; el mismo podrá ser descargado si fuera necesario. <br />
+                    También podrán ver un sitio Blazor de prueba [en desarrollo]. Por más información y las útlimas actualizaciones: visiten el repositorio público del mismo.
+                </p>
                 <div class="mbr-section-btn mt-3">
                     <a class="btn btn-warning display-4" href="/home" onclick="location.href='/home'"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Ir al sitio de prueba</a>
                     <a class="btn btn-success-outline display-4" href="https://github.com/ramiroagm/WinFormTester">Ver repositorio público &gt;</a>
@@ -121,8 +123,7 @@
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
                             <strong>Código del sitio</strong>
                         </h5>
-
-                        <p class="card-text mbr-fonts-style align-center display-7">Podrán encotnrar información, archivos README.md, librerías generadas y más contenido en el repositorio; asi mismo, se encuentra aquí el sitio en desarrollo en cuestión.<br><br>El sitio está alojado en una VM de Windows Server 2025, creada en Google Cloud.</p>
+                        <p class="card-text mbr-fonts-style align-center display-7">Podrán encontrar información, archivos README.md, librerías generadas y más contenido en el repositorio; asi mismo, se encuentra aquí el sitio en desarrollo en cuestión.<br /><br />El sitio está alojado en una VM de Windows Server 2025, creada en Google Cloud.</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
                                 <a href="https://github.com/ramiroagm/WinFormTester" target="_blank">
@@ -325,7 +326,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-                                    Me desenvuelvo correctamente en el idioma inglés.&nbsp;
+                                    Nivel de inglés certificado B2, aunque desenvuelto previamente en varias tareas con el idioma.&nbsp;<br />
+                                    [Próximamente el sitio también en inglés]
                                 </p>
                             </div>
                         </div>
