--- a/TesterBlazor/Components/Pages/InfoCredito/Personas/Personas.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Personas/Personas.razor
@@ -30,7 +30,7 @@
 </div>
 
 <!-- Modales para agregar persona -->
-<TesterBlazor.Components.Pages.InfoCredito.Personas.Modales.ModalNuevaPersona />
+@* <TesterBlazor.Components.Pages.InfoCredito.Personas.Modales.ModalNuevaPersona /> *@
 
 @code {
 
