--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -42,7 +42,7 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="infoCredito/nucleo">
+                    <NavLink class="nav-link" href="infoCredito/nucleos">
                         <span class="bi bi-new-nucleo" aria-hidden="true"></span>Nucelo
                     </NavLink>
                 </div>
